dataset1235/2025-2/1153765216/users/260676580/executions/2372395858_604674078.log
== RUN (2025-09-02 18:17:00)
-- CODE: 
dolar = float(input())
real = dolar*3.22
print(round(real,2))


-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
2
---- correct output:
6.44
---- user output:
6.44
-- TEST CASE 2:
---- input:
18
---- correct output:
57.96
---- user output:
57.96
-- TEST CASE 3:
---- input:
14
---- correct output:
45.08
---- user output:
45.08
-- TEST CASE 4:
---- input:
6
---- correct output:
19.32
---- user output:
19.32
-- TEST CASE 5:
---- input:
7
---- correct output:
22.54
---- user output:
22.54
-- TEST CASE 6:
---- input:
1
---- correct output:
3.22
---- user output:
3.22
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-02 18:16:53)
-- CODE: 
dolar = float(input())
real = dolar*3.22
print(round(real,2))


-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
2
---- correct output:
6.44
---- user output:
6.44
-- TEST CASE 2:
---- input:
18
---- correct output:
57.96
---- user output:
57.96
-- TEST CASE 3:
---- input:
14
---- correct output:
45.08
---- user output:
45.08
-- TEST CASE 4:
---- input:
6
---- correct output:
19.32
---- user output:
19.32
-- TEST CASE 5:
---- input:
7
---- correct output:
22.54
---- user output:
22.54
-- TEST CASE 6:
---- input:
1
---- correct output:
3.22
---- user output:
3.22
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-02 18:15:24)
-- CODE: 
dolar = float(input())
real = dolar*3.22
print(round(real,2))


-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
2
---- correct output:
6.44
---- user output:
6.44
-- TEST CASE 2:
---- input:
18
---- correct output:
57.96
---- user output:
57.96
-- TEST CASE 3:
---- input:
14
---- correct output:
45.08
---- user output:
45.08
-- TEST CASE 4:
---- input:
6
---- correct output:
19.32
---- user output:
19.32
-- TEST CASE 5:
---- input:
7
---- correct output:
22.54
---- user output:
22.54
-- TEST CASE 6:
---- input:
1
---- correct output:
3.22
---- user output:
3.22
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 18:21:01)
-- CODE: 
dolar = float(input())
real = dolar*3.22
print(round(real,2))


-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
2
---- correct output:
6.44
---- user output:
6.44
-- TEST CASE 2:
---- input:
18
---- correct output:
57.96
---- user output:
57.96
-- TEST CASE 3:
---- input:
14
---- correct output:
45.08
---- user output:
45.08
-- TEST CASE 4:
---- input:
6
---- correct output:
19.32
---- user output:
19.32
-- TEST CASE 5:
---- input:
7
---- correct output:
22.54
---- user output:
22.54
-- TEST CASE 6:
---- input:
1
---- correct output:
3.22
---- user output:
3.22
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 18:28:52)
-- CODE: 
dolar = float(input())
real = dolar*3.22
print(round(real,2))


-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
2
---- correct output:
6.44
---- user output:
6.44
-- TEST CASE 2:
---- input:
18
---- correct output:
57.96
---- user output:
57.96
-- TEST CASE 3:
---- input:
14
---- correct output:
45.08
---- user output:
45.08
-- TEST CASE 4:
---- input:
6
---- correct output:
19.32
---- user output:
19.32
-- TEST CASE 5:
---- input:
7
---- correct output:
22.54
---- user output:
22.54
-- TEST CASE 6:
---- input:
1
---- correct output:
3.22
---- user output:
3.22
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 18:33:11)
-- CODE: 
dolar = float(input())
real = dolar*3.22
print(round(real,2))


-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
2
---- correct output:
6.44
---- user output:
6.44
-- TEST CASE 2:
---- input:
18
---- correct output:
57.96
---- user output:
57.96
-- TEST CASE 3:
---- input:
14
---- correct output:
45.08
---- user output:
45.08
-- TEST CASE 4:
---- input:
6
---- correct output:
19.32
---- user output:
19.32
-- TEST CASE 5:
---- input:
7
---- correct output:
22.54
---- user output:
22.54
-- TEST CASE 6:
---- input:
1
---- correct output:
3.22
---- user output:
3.22
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-02 18:15:32)
-- CODE: 
dolar = float(input())
real = dolar*3.22
print(round(real,2))


-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
2
---- correct output:
6.44
---- user output:
6.44
-- TEST CASE 2:
---- input:
18
---- correct output:
57.96
---- user output:
57.96
-- TEST CASE 3:
---- input:
14
---- correct output:
45.08
---- user output:
45.08
-- TEST CASE 4:
---- input:
6
---- correct output:
19.32
---- user output:
19.32
-- TEST CASE 5:
---- input:
7
---- correct output:
22.54
---- user output:
22.54
-- TEST CASE 6:
---- input:
1
---- correct output:
3.22
---- user output:
3.22
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-28 18:11:21)
-- CODE: 
real = dolar*3.22
dolar = real 
print(round(dolar,2))

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
2
---- correct output:
6.44
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    real = dolar*3.22
           ^^^^^
NameError: name 'dolar' is not defined
-- TEST CASE 2:
---- input:
18
---- correct output:
57.96
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    real = dolar*3.22
           ^^^^^
NameError: name 'dolar' is not defined
-- TEST CASE 3:
---- input:
14
---- correct output:
45.08
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    real = dolar*3.22
           ^^^^^
NameError: name 'dolar' is not defined
-- TEST CASE 4:
---- input:
6
---- correct output:
19.32
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    real = dolar*3.22
           ^^^^^
NameError: name 'dolar' is not defined
-- TEST CASE 5:
---- input:
7
---- correct output:
22.54
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    real = dolar*3.22
           ^^^^^
NameError: name 'dolar' is not defined
-- TEST CASE 6:
---- input:
1
---- correct output:
3.22
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    real = dolar*3.22
           ^^^^^
NameError: name 'dolar' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 18:31:11)
-- CODE: 
dolar = float(input())
real = dolar*3.22
print(round(real,2))


-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
2
---- correct output:
6.44
---- user output:
6.44
-- TEST CASE 2:
---- input:
18
---- correct output:
57.96
---- user output:
57.96
-- TEST CASE 3:
---- input:
14
---- correct output:
45.08
---- user output:
45.08
-- TEST CASE 4:
---- input:
6
---- correct output:
19.32
---- user output:
19.32
-- TEST CASE 5:
---- input:
7
---- correct output:
22.54
---- user output:
22.54
-- TEST CASE 6:
---- input:
1
---- correct output:
3.22
---- user output:
3.22
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
